# FinalProjectAutonomousSystem

./: .gitignore  README.md  controller_activation.txt  map.bt  teleop_int.txt  tree.txt
ros2_ws/: frames_2026-02-27_23.28.17.gv  frames_2026-02-28_09.08.01.gv  frames_2026-02-28_09.12.31.gv
ros2_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc
ros2_ws/src/controller_pkg/: CMakeLists.txt
ros2_ws/src/controller_pkg/src/: manual_pilot.cpp
ros2_ws/src/decision_making_pkg/: CMakeLists.txt  decision_making_pkg.md  package.xml
ros2_ws/src/decision_making_pkg/launch/: mission.launch.py
ros2_ws/src/decision_making_pkg/src/: state_machine.cpp  state_machine_temp.cpp
ros2_ws/src/exploration_pkg/: CMakeLists.txt  exploration_pkg.md  package.xml  sappu_frontier_explorer.md
ros2_ws/src/exploration_pkg/src/: errt_explorer_3d.cpp  errt_explorer_3d_old.cpp  errt_planner_temp.cpp  frontier_detector.cpp  frontier_explorer.cpp  frontier_explorer_node.cpp  graph_explorer_3d.cpp  hybrid_frontier_explorer.cc  lazy_explorer.cc  nbv_explorer_3d.cpp  raycast_explorer.cc  raycast_explorer_pointcloud.cc  sappu_frontier_explorer.cpp
ros2_ws/src/lantern_hunting_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/lantern_hunting_pkg/lantern_hunting_pkg/: hunting_node.py
ros2_ws/src/lantern_hunting_pkg/lantern_hunting_pkg/src/: hunting_node.cpp
ros2_ws/src/lantern_hunting_pkg/src/: hunting_node.cpp
ros2_ws/src/launch/: cave_mapping.launch.py
ros2_ws/src/mission_control_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/mission_control_pkg/src/: mission_node.cpp
ros2_ws/src/path_planning_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/path_planning_pkg/src/: path_planner_node.cpp  rrt_planner.cpp
ros2_ws/src/perception_pkg/: package.xml  perceptio_pkg.md  setup.py
ros2_ws/src/perception_pkg/launch/: mapping.launch.py  mapping.launch_temp.py  mapping_rtab.launch.py
ros2_ws/src/perception_pkg/perception_pkg/: lantern_tracker.py
ros2_ws/src/simulation/: CMakeLists.txt
ros2_ws/src/simulation/launch/: simulation.launch.py
ros2_ws/src/simulation/scripts/: lantern_tracker.py
ros2_ws/src/teleop_pkg/: teleop_pkg.md
ros2_ws/src/teleop_pkg/teleop_pkg/: teleop.py
ros2_ws/src/trajectory_generator_pkg/: CMakeLists.txt  package.xml  trajectory_generation_pkg.md
ros2_ws/src/trajectory_generator_pkg/src/: trajectory_generator_node.cpp  trajectory_generator_node_temp.cpp
ros2_ws/src/waypoint_to_trajectory/: CMakeLists.txt  package.xml
ros2_ws/src/waypoint_to_trajectory/include/basic_waypoint_pkg/: planner.hpp
ros2_ws/src/waypoint_to_trajectory/launch/: goal_to_trajectory.launch.py  octomap_mapping.launch.xml
ros2_ws/src/waypoint_to_trajectory/src/: planner.cc  planner_node.cc
src/decision_making_pkg/: CMakeLists.txt  README.md  package.xml
src/decision_making_pkg/launch/: mission.launch.py
src/decision_making_pkg/src/: state_machine.cpp
src/exploration_pkg/: CMakeLists.txt  README.md  package.xml
src/exploration_pkg/src/: frontier_explorer.cpp
src/lantern_hunting_pkg/src/: hunting_node.cpp
src/perception_pkg/launch/: mapping.launch.py
src/perception_pkg/perception_pkg/: lantern_detector (Old_Relative_position).py  lantern_detector.py
src/teleop_pkg/: package.xml  setup.py
src/teleop_pkg/teleop_pkg/: teleop.py
src/trajectory_generator_pkg/: CMakeLists.txt  package.xml
