<?xml version="1.0"?>
<package format="3">
  <name>exploration_pkg</name>
  <version>0.0.1</version>
  <description>Frontier-based exploration for cave mapping</description>
  <maintainer email="fuzailhamid2002@gmail.com">Fuzail Hamid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>image_transport</depend>
  <depend>vision_opencv</depend>

  <!-- For building -->
  <exec_depend>ament_cmake</exec_depend>
</package>