<?xml version="1.0"?>
<package format="3">
  <name>lantern_hunting_pkg</name>
  <version>0.0.0</version>
  <description>Pilot node for automated lantern hunting.</description>
  <maintainer email="ryan@todo.todo">Ryan</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
