<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning_pkg</name>
  <version>0.0.0</version>
  <description>A* Path Planner and Trajectory Generator</description>
  <maintainer email="samuele.ribaudo@tum.de">sappu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>octomap</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_planning_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
